# niuma-faith

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tmp_merge_diff_artifacts.json  tmp_merge_diffs.json  tsconfig.json  vite.config.ts  牛马信仰-需求文档.md
.merge-diffs/: frontend__src__api__task.ts.diff  frontend__src__components__CheckInForm.vue.diff  frontend__src__components__FloatingWidget.vue.diff  frontend__src__components__TaskList.vue.diff  frontend__src__stores__task.ts.diff  frontend__src__types__index.ts.diff  src-tauri__Cargo.toml.diff  src-tauri__build.rs.diff  src-tauri__src__application__faith_service.rs.diff  src-tauri__src__application__ledger_service.rs.diff  src-tauri__src__application__mod.rs.diff  src-tauri__src__application__task_service.rs.diff  src-tauri__src__data__repository.rs.diff  src-tauri__src__data__schema.rs.diff  src-tauri__src__data__sqlite.rs.diff  src-tauri__src__domain__faith.rs.diff  src-tauri__src__domain__level.rs.diff  src-tauri__src__domain__models.rs.diff  src-tauri__src__domain__task.rs.diff  (+2 more)
docs/: tasks.md  (+16 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: AGENTS.md  lib.rs  local_server.rs  main.rs
src-tauri/src/application/: AGENTS.md  faith_service.rs  ledger_service.rs  mod.rs  task_service.rs
src-tauri/src/data/: AGENTS.md  mod.rs  repository.rs  schema.rs  sqlite.rs
src-tauri/src/domain/: AGENTS.md  faith.rs  level.rs  mod.rs  models.rs  task.rs
src-tauri/src/tauri/: AGENTS.md  commands.rs  mod.rs  state.rs
(+75 files in other folders)
