[package]
name = "niuma-faith"
version = "0.1.0"
edition = "2021"

[lib]
name = "niuma_faith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "niuma-faith"
path = "src/main.rs"
required-features = ["desktop"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "test"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["desktop", "custom-protocol"]
desktop = ["dep:tauri", "dep:tauri-plugin-shell"]
custom-protocol = ["desktop", "tauri/custom-protocol"]
